--- a/index.html
+++ b/index.html
@@ -7,58 +7,58 @@
 </head>
 <body>
 <h1>Justin Kho</h1>   
-<img src="https://source.unsplash.com/random/300x200" alt="Foto van Justin">
+<img src="https://userpicture20.smartschool.be/User/Userimage/hashimage/hash/6119_de2f671e-4598-4fdb-b0a7-41dc6d2b1062/plain/1/res/48" alt="Foto van Justin">
+
 <h2>Summary</h2>
-<p></p>
+<p>Ik ben een hardwerkende persoon dat goed kan uitleggen.</p>
 
 <hr>
 
 <h2>Education</h2>
 <ul>
-<li></li>    
+<li>Burgelijk Ingenieur - KU Leuven</li>    
 </ul>
 
 <hr>
 
 <h2>Work Experience</h2>
 <ul>
-    <li>ABC</li>
-    <p>April 2020</p>
+    <li>RV Brickrental - orderpicker</li>
+    <p>Augustus 2022 - December 2022</p>
         <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Spullen uit het magazijn gehaald</li>
+        <li>Bestellingen klaarmaken</li>
         </ul>
-    <li>ABC</li>
-    <p>April 2020</p>
+    <li>Jan-van-Ruusbroeckkollege - Wiskunde & Fysica Leerkracht</li>
+    <p>Januari 2022 - Nu</p>
         <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Eerste halve jaar als vervanging voor een leerkracht op vaderschapsverlof</li>
+        <li>Wiskunde aan twee klassen in het vierde jaar</li>
+        <li>Fysica aan vier klassen in het derde en vierde jaar</li>
         </ul>
 </ul>
 
 <hr>
 <h2>Skills</h2>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Uitleg geven: ⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Samenwerken met andere leerkrachten:⭐️⭐️⭐️</li>
+    <li>Begrip van leerstof: ⭐️⭐️⭐️⭐️</li>
 </ul>
 
 <hr>
 
 <h2>Awards and Certifications</h2>
 <ul>
-    <li></li>
+    <li>Leerkracht van de maand: November 2023 & April 2024</li>
 </ul>
 
 <hr>
 
 <h2>Other</h2>
 <ul>
-    <li></li>
-    <li></li>
+    <li><a href="https://www.google.com/search?q=mijnenveger&rlz=1C1GCEU_enBE1129BE1129&oq=mijnenveger&aqs=chrome..69i57j0i512l2j46i175i199i512j0i512l3j46i512j0i512l2.5242j0j7&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">Hobbies</a></li>
+    <li><a href="https://www.google.com/search?q=contacteer+me+niet&rlz=1C1GCEU_enBE1129BE1129&oq=contacteer+me+niet&aqs=chrome..69i57j33i160.4898j0j7&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">Contacteer me</a></li>
 </ul>
 
 </body>
